[package]
name = "sea-breeze-data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive = "1.0.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

clap = { version = "4.5", features = ["derive"] }
chrono-tz = "0.9.0"

tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
